# ai-pricing-tracker

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.claude/commands/roles/: README.md  deployment-specialist.md  devops-engineer.md  scraper.md  security-specialist.md  technical-writer.md  testing-specialist.md
.githooks/: README.md  commit-msg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_provider.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  update-ai-pricing.yml  update-pricing.yml
docs/: COMMIT_CONVENTION.md  pricing-dashboard.html
docs/research/claude/: ai-pricing-github-action.yml  claude-code-implementation-plan.md  claude-code-quickstart.md  default-pricing-data.md  models-and-exceptions.md  pricing-dashboard.html  pricing-scraper-script.py  pricing-utilities.py  pypi-package-structure.py  pypi-setup-guide.md  readme-template.md  setup-guide.md  test-files.md
docs/research/claude/chats/: testing-strategy-improvements.md
scripts/: scrape_pricing.py  validate_pricing.py
src/ai_pricing_tracker/: __init__.py  cli.py  exceptions.py  manager.py  models.py
src/ai_pricing_tracker/data/: default_pricing.json
src/ai_pricing_tracker/scripts/: README.md  __init__.py  scrape_pricing.py  validate_pricing.py
tests/: test_manager.py  test_scraper.py
tests/fixtures/data/: edge_case_pricing.json  invalid_pricing.json  valid_pricing.json
tests/fixtures/html/: anthropic_pricing.html  openai_pricing.html
tests/test_integration/: test_scraper_integration.py
tests/test_property/: test_pricing_properties.py
tests/test_validation/: test_pricing_validation.py
