[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pricing-tracker"
version = "0.1.0"
authors = [
    {name = "Cole Summers", email = "your.email@example.com"},
]
description = "Auto-updating AI API pricing data for Claude, OpenAI, and more"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ai", "pricing", "api", "openai", "anthropic", "claude", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/colesummers/ai-pricing-tracker"
Documentation = "https://github.com/colesummers/ai-pricing-tracker#readme"
Repository = "https://github.com/colesummers/ai-pricing-tracker"
Issues = "https://github.com/colesummers/ai-pricing-tracker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.990",
    "build>=0.7.0",
    "twine>=4.0.0",
]
scraper = [
    "playwright>=1.30.0",
    "beautifulsoup4>=4.11.0",
]

[project.scripts]
ai-pricing-update = "ai_pricing_tracker.cli:main"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", "docs", "venv", "scripts"]
ignore = ["E203", "W503", "E402"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["docs/", "venv/"]

[[tool.mypy.overrides]]
module = "tests.test_scraper"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.scripts]
lint = "python -m black . && python -m flake8 && python -m mypy src tests"